final step. last changes before review

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,4 @@
 markers =
     login_guest: marker for new users
     user_basket_test: marker for authorized users tests
+    need_review: tests for review
